improved style of code samples in slides

--- a/slides/index.html
+++ b/slides/index.html
@@ -85,18 +85,18 @@
 						}
 					},
 					{ src: 'plugin/tagcloud/tagcloud.js', async: true },
-					// { src: 'plugin/badges/badges.js'}
+					{ src: 'plugin/badges/badges.js'}
 				],
 				badges: {
 					path: 'plugin/badges',
 					defaults: {
-                		position: 'br'
+                		position: 'tr'
             		},
 					languages: {
 						csharp: {
 							label: 'C#',
 							// fg: 'gray',
-							// bg: '#fdf6e3'
+							bg: '#fdf6e3'
 						},
 						fsharp: {
 							label: 'F#',
