excluded badges; changed content

--- a/slides/index.html
+++ b/slides/index.html
@@ -85,7 +85,7 @@
 						}
 					},
 					{ src: 'plugin/tagcloud/tagcloud.js', async: true },
-					{ src: 'plugin/badges/badges.js'}
+					// { src: 'plugin/badges/badges.js'}
 				],
 				badges: {
 					path: 'plugin/badges',
