slides, image cleanup, logo

--- a/slides/index.html
+++ b/slides/index.html
@@ -7,7 +7,7 @@
 		<title>Value Objects (on steroids)</title>
 		
 		<!-- favicon -->
-		<link rel="shortcut icon" type="image/x-icon" href="/resources/Softwerkskammer16x16.ico">
+		<link rel="shortcut icon" type="image/x-icon" href="/resources/logo_rh_fav.png">
 
 		<link rel="stylesheet" href="css/reveal.css">
 
